@@ -1,3 +1,10 @@
+(10/17/2006)
+
+*** Added the possibility to share schedulers (if in the same JVM 
+	instance) between executions.
+	
+*** Made sure the event bus is initialized in all cases
+
 (10/16/2006)
 
 *** Make task:execute(arguments=...) work with vargs
